# paperd

./: LICENSE.TXT  Makefile  README.md  config.py  paperd.py  paperd.yml  pyproject.toml  render.py  show.py  show_epd.py  show_pil.py  show_tk.py  textlib.py  webserver.py
epd/: epd2in9.py
examples/musicplayer/: README.md  paperd.yml  update.sh
examples/musicplayer/fonts/: README.md  SH PINSCHER.txt
paperd/: paperd.py  render.py  show_epd.py  show_pil.py  show_tk.py  webserver.py
paperd/epd/: epd2in9.py
